# solar-scale

./: LICENSE  README.md  pyproject.toml
data/: bodies.json
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  CalculatorForm.tsx  ResultsTable.tsx  api.ts
solar_scale/: cli.py  data.py  service.py
src/solar_scale/: api.py  cli.py  formatting.py  models.py  service.py  units.py
tests/: test_service.py  test_units.py
