[project]
name = "solar-scale"
version = "0.1.0"
description = "Solar system scale calculator with metric-first calculations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.0",
  "fastapi>=0.100",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]
[project.scripts]
solar-scale = "solar_scale.cli:app"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"